dump/src/reader/v4/snapshots/dump__reader__v4__test__read_dump_v4-10.snap
---
source: dump/src/reader/v4/mod.rs
expression: movies.settings()
---
Ok(
    Settings {
        displayed_attributes: Reset,
        searchable_attributes: Reset,
        filterable_attributes: Set(
            {
                "genres",
                "id",
            },
        ),
        sortable_attributes: Set(
            {
                "release_date",
            },
        ),
        ranking_rules: Set(
            [
                "words",
                "typo",
                "proximity",
                "attribute",
                "sort",
                "exactness",
                "release_date:asc",
            ],
        ),
        stop_words: Set(
            {},
        ),
        synonyms: Set(
            {},
        ),
        distinct_attribute: Reset,
        typo_tolerance: Set(
            TypoSettings {
                enabled: Set(
                    true,
                ),
                min_word_size_for_typos: Set(
                    MinWordSizeTyposSetting {
                        one_typo: Set(
                            5,
                        ),
                        two_typos: Set(
                            9,
                        ),
                    },
                ),
                disable_on_words: Set(
                    {},
                ),
                disable_on_attributes: Set(
                    {},
                ),
            },
        ),
        _kind: PhantomData<dump::reader::v4::settings::Checked>,
    },
)
